--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,39 @@
+#allDropmeContainer{
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background-color: #AAA;
+	padding-bottom: 164px;
+}
+
+#container1{}
+	#container1 .movable{
+		display: inline-block;
+		margin: auto;}
+
+#mainContent{
+	background-color: #BBB;
+	margin: auto;
+	width: 980px;
+	height: 100%;}
+
+
+footer{
+	height: 164px;
+	position: fixed;
+	background-color: #999;
+	bottom: 0;
+	width: 100%;}
+#container2 {
+	margin: 0 auto; 
+	padding: 0; 
+	width: 100%; 
+	height: 100%;}
+
 .dropme {
-	height: 67px;
 	list-style-type: none;
-	background-color: #FFA;
 	text-align: center;
 	margin: 0 auto; 
 	padding: 0; 
@@ -18,10 +50,22 @@
 		.dropme .movable:active { 
 			background-color: #F0F;}
 
-.displayp{
-	width: 200px;
-	float: left;
+.informationContainer{
+	margin: 0;
+	height: 64px;
+	background-color: #888;
 }
+.informationContainer p{
+	margin: 0;
+}
+
+#displaypContainer{
+	position: fixed;
+	top: 0;
+	right: 0;}
+	.displayp{
+		width: 200px;
+		float: left;}
 
 .visuallyhidden {
 	position: absolute; 
@@ -31,9 +75,9 @@
 	margin: -1px; padding: 0; border: 0;}
 
 .hoverWindow{
+	position: fixed;
 	width: 96px;
 	height: 64px;
 	background-color: #666;
 	color: #DDD;
-	font-size: 50%;
-}
+	font-size: 50%;}
